--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>p5.js example</title>
+  <title>Perazy Music</title>
   <style>
     body {
       padding: 0;
+      margin: 0;
+      /*Hide scrollbar*/
+      overflow: hidden;
+    }
+
+    /*For later use*/
+    html, body {
+      width:  100%;
+      height: 100%;
       margin: 0;
     }
   </style>
